# llm-tools-jira

./: README.md  llm_tools_jira.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: test_llm_tools_jira.py
